overall content update

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -80,3 +80,11 @@ img {
     font-feature-settings: 'rlig' 1, 'calt' 1;
   }
 }
+
+.mermaid svg {
+  overflow: visible !important;
+}
+
+.mermaid foreignObject {
+  overflow: visible !important;
+}
